        will not step on each other.
    * Better ConnectionHTTP.translate_url acts only on the path part.
    * DownloadToolBase.add_download_url in InstlInstanceSync_url.create_download_instructions_for_item: translate_url applied only to URLs created by instl.
    * Reading of info map file checks only checksum not sig.
    * Case insensitive checksum checks.

    user visible changes, client:
    * check-checksum command was defined by mistake to require --out command line option. Now removed.
    * A hack to prevent unwtaring of the sync folder. Copy command might copy something to the top level of the sync folder.
        So sync folder is avoided by detecting the bookkeeping folder inside.
    * If LOCAL_SYNC_DIR is not known it is extracted from SYNC_BASE_URL only if SYNC_BASE_URL exists.
        Previously if SYNC_BASE_URL was not found an exception was raised. Help to create remove without needing URLs.
    user visible changes, admin:
    * depend command: added a message at the end so we know output was created OK.

15/3/2015 0.10.0.4
    user visible changes, client:
    * Better, more meaningful progress messages.
    * GUIDs that have upper case characters are converted to lower case.
    * HAVE_INFO_MAP_PATH file is copied to the SITE_HAVE_INFO_MAP_PATH for possible usage by remove command.
    * SITE SITE_HAVE_INFO_MAP_PATH is used by remove if HAVE_INFO_MAP_PATH was not found. This was done because when removing installation that was done from offline folder, Central will not pass LOCAL_REPO_SYNC_DIR to instl. HAVE_INFO_MAP_PATH depends on LOCAL_REPO_SYNC_DIR.
    * New variable HAVE_INFO_MAP_FILE_NAME, used by HAVE_INFO_MAP_PATH, NEW_HAVE_INFO_MAP_PATH, SITE_HAVE_INFO_MAP_PATH.
    * Added time measurements to create urls
    * Sync command: When no files to sync created batch file will have one progress item: "Done Sync".
    * Sync command: When no dirs to create no prgress items will be created.
    * Sync using info_map with prepared URLs.