@@ -10,6 +10,8 @@
     * DownloadToolBase.add_download_url in InstlInstanceSync_url.create_download_instructions_for_item: translate_url applied only to URLs created by instl.
     * Reading of info map file checks only checksum not sig.
     * Case insensitive checksum checks.
+    * Checks with multi regexes are combined with new function compile_regex_list_ORed, used in conjuction with followingparams:
+        FOLDER_WTAR_REGEX, FILE_WTAR_REGEX, FOLDER_EXCLUDE_REGEX, FILE_EXCLUDE_REGEX.
 
     user visible changes, client:
     * check-checksum command was defined by mistake to require --out command line option. Now removed.
@@ -17,8 +19,10 @@
         So sync folder is avoided by detecting the bookkeeping folder inside.
     * If LOCAL_SYNC_DIR is not known it is extracted from SYNC_BASE_URL only if SYNC_BASE_URL exists.
         Previously if SYNC_BASE_URL was not found an exception was raised. Help to create remove without needing URLs.
+
     user visible changes, admin:
     * depend command: added a message at the end so we know output was created OK.
+    * stage2svn command: added check to prevent adding files or folder with character ','.
 
 15/3/2015 0.10.0.4
     user visible changes, client:
